[package]
name = "nutr"
version = "0.1.0"
authors = ["rmasen"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
csv = "1"
serde = "1"
serde_derive = "1"
serde_json = "1"
[dependencies.rusqlite]
version = "0.20.0"
features = ["bundled"]